[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.68.0,<0.69.0"
pydantic = ">=1.8.0,<2.0.0"
uvicorn = ">=0.15.0,<0.16.0"
unicorn = {extras = ["all"], version = "^2.0.1.post1"}
gunicorn = "^20.1.0"
fastapi-healthcheck = "^0.2.12"
sqlalchemy = "^2.0.15"
python-multipart = "^0.0.6"
aiofiles = "^23.1.0"
cryptography = "^41.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
