[tool.poetry]
name = "chalk-server"
# placeholder. on release replaced by poetry
# https://pypi.org/project/poetry-dynamic-versioning/
version = "0.0.0"
description = "Local Chalk Ingestion Server"
authors = []
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.scripts]
chalkserver = "server.__main__:main"

[tool.poetry.dependencies]
cryptography = "^41.0.3"
fastapi = "^0.100.1"
pydantic = ">=2.0.0"
python = "^3.11"
sqlalchemy = "^2.0.15"
uvicorn = ">=0.15.0,<0.16.0"

[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core", "poetry_dynamic_versioning"]

[tool.poetry-dynamic-versioning]
enable = true
